Rename MMR programme to MMRV
This renames the MMR programme internally to MMRV but doesn't change any
user facing pieces of content for now.

We know that the MMR programme is eventually going to be replaced by
MMRV, but there will be a period of time where both MMR and MMRV
vaccines are given to children. We've decided this will be the same
programme, so this rename to `mmrv` just helps to prepare for the
future and to avoid needing to migrate data in production later.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -265,7 +265,7 @@ en:
           flu: Flu
           hpv: HPV
           menacwy: MenACWY
-          mmr: MMR
+          mmrv: MMR
           td_ipv: Td/IPV
       school_move:
         sources:
@@ -551,7 +551,7 @@ en:
         flu: Consent for the flu vaccination
         hpv: Consent for the HPV vaccination
         menacwy: Consent for the MenACWY vaccination
-        mmr: Consent for the MMR vaccination
+        mmrv: Consent for the MMR vaccination
         td_ipv: Consent for the Td/IPV vaccination
       i_agree: Consent given
     notes:
@@ -578,7 +578,7 @@ en:
         flu: Do they agree to them having the flu vaccination?
         hpv: Do they agree to them having the HPV vaccination?
         menacwy: Do they agree to them having the MenACWY vaccination?
-        mmr: Do they agree to them having the MMR vaccination?
+        mmrv: Do they agree to them having the MMR vaccination?
         td_ipv: Do they agree to them having the Td/IPV vaccination?
     notes:
       title:
